--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Advent+Pro:100);
-@import url('https://fonts.googleapis.com/css?family=Rajdhani:700');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
 html { 
   background:url('https://wallpaperscraft.com/image/dolls_many_people_smile_88090_1920x1080.jpg') no-repeat center center fixed;
   background-size: cover;
@@ -13,20 +13,18 @@ h1{
 }
 
 p{
-  background: rgba(0, 0, 0, 0.3);
-  display:inline-block;
   padding: 3px 10px;
   color: rgba(255, 255, 255, 1);
   font-size: 1.2em;
   margin-left: 400px;
   margin-right:400px;
   line-height: 160%;
-  font-family: 'Rajdhani', sans-serif;
+  font-family: 'Fjalla One', sans-serif;
   }
 
 ul li{
   color: White;
-  font-family: 'Rajdhani', sans-serif;
+  font-family: 'Fjalla One', sans-serif;
   list-style-position: inside;
 }
 
@@ -35,6 +33,7 @@ ul li{
   margin: 25px 8px;
   color: White;
   font-size: 1.6em;
+  font-family: 'Advent Pro', sans-serif;
 }
 
 /* unvisited link */
