--- a/main.css
+++ b/main.css
@@ -5,6 +5,8 @@ html {
   background-size: cover;
   font-family: 'Advent Pro', sans-serif;
   color: rgba(245, 245, 245, 1);
+  background: rgba(0, 0, 0, 0.3);
+  display:inline-block;
 }
 h1{
   font-size: 4em;
