--- a/main.css
+++ b/main.css
@@ -13,6 +13,8 @@ h1{
 }
 
 p{
+  background: rgba(0, 0, 0, 0.3);
+  display:inline-block;
   padding: 3px 10px;
   color: rgba(255, 255, 255, 1);
   font-size: 1.2em;
@@ -26,6 +28,9 @@ ul li{
   color: White;
   font-family: 'Fjalla One', sans-serif;
   list-style-position: inside;
+  background: rgba(0, 0, 0, 0.3);
+  background:inline-block;
+  font-size: 1.2em;
 }
 
 .secondary li{
@@ -58,7 +63,7 @@ a:active {
 
 .second {
   color: rgba(255, 255, 255, 1);
-  font-size: 1.2em;
+  font-size: 1.35em;
   font-family: 'Fjalla One', sans-serif;
   }
 
